Update content for Wuselstation #8: Achtsamkeit

--- a/8.html
+++ b/8.html
@@ -2,45 +2,32 @@
 <html lang="de">
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <meta charset="UTF-8">
-       <link rel="stylesheet" href="css/pico.min.css">
+    <meta charset="UTF-8">
+    <link rel="stylesheet" href="css/pico.min.css">
     <script src="js/common.js"></script>
     <title>Wuselstationen</title>
 </head>
 <body>
-
-
     <main class="container">
-
-<h1>Wuselstation #x: Titel</h1>
-
-  <article id="article">
-     👉 Kurze Info , um was es geht.
-  </article>
-
-  <details>
-        <summary>Hintergrund</summary>
-        <p>Was ist der Sinn dieser Station?
-        </p>
-      
-    </details>
-    <details>
-        <summary>Benötigtes Material</summary>
-       <ul>
-      <li>Was braucht man/ was stellen wir an den Tischen zur Verfügung?
-
-       </ul>
-    </details>
-
-<h2>Beschreibung</h2>
-<p>Was kann hier gemacht werden? Wie soll man das machen?
-</p>
-
-
-    <p> <p><a href="index.html"><button>⬅ Zurück zur Übersicht</button></a></p>
-</main>
-
-    
-
+        <h1>Wuselstation #8: Achtsamkeit</h1>
+        <article id="article">
+            👉 In dieser Station gibt es eine kleine Reise zu Dir selbst. Achtsamkeit bedeutet auch, sich und seine Umwelt wieder wahrzunehmen und zu erleben. Sich auf sich selbst einzulassen ist einer der schwierigsten Dinge im Bereich der Psychologie. Warum es trotzdem einen Versuch wert ist und warum es zusätzlich deine Unterrichtsqualität verbessern kann, das zeige ich Dir hier.
+        </article>
+        <details>
+            <summary>Hintergrund</summary>
+            <p>Wir neigen dazu in unserem stressigen Alltag nur noch zu funktionieren. Wir lassen eigene Gefühle nicht mehr zu, aus Angst, dass sie uns zusätzlich einschränken oder lähmen könnten und ignorieren uns schlussendlich selbst. Warum es sinnvoll ist eben Dies nicht zu tun, das möchte ich Dir hier zeigen. Nur wer sich kennt, weiß wer er sein möchte und wo seine Bedürfnisse liegen kann auch vollends als Vorbild fungieren und den Bedürfnissen anderer begegnen. Jedes Leben braucht Raum, da es erst dann zur Entfaltung kommen kann. Lehrkräfte die dies beherrschen haben eine klarere Vorstellung von Dem was sie brauchen und somit auch ihre Klassen bekommen sollen. Lass dich darauf ein und versuche Dir selbst Raum und Entfaltung zu schenken.</p>
+        </details>
+        <details>
+            <summary>Benötigtes Material</summary>
+            <ul>
+                <li>Eigene Kopfhörer</li>
+                <li>Smartphone oder anderes digitales Endgerät</li>
+                <li><a href="https://app.fobizz.com/teaching_board/public_screens/450fac97-6775-47dc-93e2-e1930a60f976/pages/c7adf8a5-a3c1-45a5-b0ef-706552c394ee?token=11728e471fdbe8a032e813173cef22de" target="_blank">Link zum Material</a></li>
+            </ul>
+        </details>
+        <h2>Beschreibung</h2>
+        <p>Lass dich einfach auf diese kleine Reise ein und nimm Dir die kommenden 15-20 Minuten, um Dir ggf. selbst ein Stück näher zu kommen. Folge dazu einfach den Anweisungen auf den jeweiligen Seiten des <a href="https://app.fobizz.com/teaching_board/public_screens/450fac97-6775-47dc-93e2-e1930a60f976/pages/c7adf8a5-a3c1-45a5-b0ef-706552c394ee?token=11728e471fdbe8a032e813173cef22de" target="_blank">Materials</a>. Wenn du eine Seite gelesen und bearbeitet hast, swipe zur nächsten und folge den jeweiligen Anweisungen.</p>
+        <p><a href="index.html"><button>⬅ Zurück zur Übersicht</button></a></p>
+    </main>
 </body>
 </html>
