--- a/12.html
+++ b/12.html
@@ -9,9 +9,36 @@
 </head>
 <body>
     <main class="container">
-        <h1>Wuselstation #12: Selbsttest zur pädagogischen Beziehungsgestaltung</h1>
-       
-        <p style="margin-top: 2rem;"><a href="index.html"><button>⬅ Zurück zur Übersicht</button></a></p>
+        <h1>Wuselstation #12: Psychologische Sicherheit</h1>
+        <article id="article">
+            👉 Eine LeOniE-Befragung, um die Psychologische Sicherheit in einer Klasse zu erheben.
+        </article>
+        <details>
+            <summary>Hintergrund</summary>
+            <p>Psychologische Sicherheit ist nicht nur eine „Superkraft" für Teams, sondern auch Voraussetzung für nachhaltiges und effektives Lernen in der Schule. Der Begriff „Psychologische Sicherheit" wurde im Kontext von Organisationen federführend von Amy Edmondson entwickelt und beschreibt u.a. das Vertrauen eines Menschen, dass er seine Meinung und Ideen äußern, Leistung zeigen und auch Fehler machen kann, ohne Sorge vor Häme, Abwertung, Ausgrenzung oder Beschämung haben zu müssen. Auch gelebte Feedbackkultur, Transparenz von Informationen und Klassenentscheidungen sowie das offene Ansprechen von Problemen bzw. Konflikten gehören zu Psychologischer Sicherheit.</p>
+            <p>Der Fragebogen wurde dem Buch „Psychologische Sicherheit" von Karin Volbert (2024) entnommen und für Schulklassen angepasst.</p>
+        </details>
+        <details>
+            <summary>Benötigtes Material</summary>
+            <ul>
+                <li>LeOniE-Befragung (anfragen über <a href="mailto:katrin.halfmann@bbs-old.de">katrin.halfmann@bbs-old.de</a>, wenn du bei <a href="https://leonie-sh.de" target="_blank">leonie-sh.de</a> freigeschaltet bist)</li>
+            </ul>
+        </details>
+        <h2>Beschreibung</h2>
+        <p>Wähle eine Klasse aus und betrachte die einzelnen Items des Fragebogens zu Psychologischer Sicherheit.</p>
+        <p>Wie schätzt du im Vorfeld die Zustimmungswerte in der Klasse ein? Welchen Einfluss haben sie deiner Meinung nach auf das Lernen in der Klasse?</p>
+        <p>Besorge dir die LeOniE-Befragung (s.o.) und hole dir die Einschätzung der Klasse. Zeige ihnen direkt im Anschluss die Ergebnisse und komme mit ihnen darüber ins Gespräch:</p>
+        <ul>
+            <li>Was überrascht euch?</li>
+            <li>Was habt ihr ähnlich erwartet?</li>
+            <li>Woran macht ihr das in der Klasse fest?</li>
+            <li>Welches Ergebnis wollt ihr bei der nächsten Befragung in drei Monaten (…) erreichen?</li>
+            <li>Was kann wer dafür tun?</li>
+        </ul>
+        <p>Manchmal zeigen sich Baustellen nur bei einzelnen Aspekten wie z.B. Feedbackkultur oder dem offenen Ansprechen von Konflikten. Hier kann dann direkt angesetzt werden.</p>
+        <p>Die Befragung kannst du (in angepasster Form) auch auf dein eigenes Arbeitsteam anwenden. Wie sieht die Psychologische Sicherheit in deinem Team aus? Was ist dein Beitrag dazu? Welche Entwicklungsrichtung kannst du erkennen?</p>
+        <p><strong>Tausche dich mit anderen darüber aus!</strong></p>
+        <p><a href="index.html"><button>⬅ Zurück zur Übersicht</button></a></p>
     </main>
 </body>
 </html>
