Enhance content with article and details sections
Added article and details sections to enhance content.

--- a/13.html
+++ b/13.html
@@ -10,8 +10,23 @@
 <body>
     <main class="container">
         <h1>Wuselstation #13: Mit anderen Augen</h1>
-       
-        <p style="margin-top: 2rem;"><a href="index.html"><button>⬅ Zurück zur Übersicht</button></a></p>
+        <article id="article">
+            👉 In dieser Station kannst du in die Perspektive eines Schülers mit Differenzierungsbedarf schlüpfen und u.a. einen Arbeitsauftrag aus der Perspektive eines Legasthenikers wahrnehmen und bearbeiten.
+        </article>
+        <details>
+            <summary>Hintergrund</summary>
+            <p>Perspektivwechsel ermöglicht uns, die Lernsituationen unserer Schüler*innen besser zu verstehen. Wenn wir selbst erleben, wie es ist, mit besonderen Herausforderungen einen Arbeitsauftrag zu bearbeiten, können wir unseren Unterricht bewusster und inklusiver gestalten.</p>
+        </details>
+        <details>
+            <summary>Benötigtes Material</summary>
+            <ul>
+                <li>Alle benötigten Materialien findest du direkt an der Station vor Ort</li>
+            </ul>
+        </details>
+        <h2>Beschreibung</h2>
+        <p>An dieser Station findest du alle Informationen und Materialien direkt vor Ort. Lass dich auf den Perspektivwechsel ein und erlebe selbst, wie sich Lernen mit besonderen Herausforderungen anfühlt.</p>
+        <p>Folge den Anweisungen, die du an der Station vorfindest, und nimm dir Zeit für diese Erfahrung.</p>
+        <p><a href="index.html"><button>⬅ Zurück zur Übersicht</button></a></p>
     </main>
 </body>
 </html>
