--- a/14.html
+++ b/14.html
@@ -9,9 +9,24 @@
 </head>
 <body>
     <main class="container">
-        <h1>Wuselstation #14: Stress lass nach!</h1>
-       
-        <p style="margin-top: 2rem;"><a href="index.html"><button>⬅ Zurück zur Übersicht</button></a></p>
+        <h1>Wuselstation #14: Stress lass nach</h1>
+        <article id="article">
+            👉 Mit Hilfe eines Schemas kannst du dich selbst reflektieren, indem du deine Gedanken, Gefühle, körperliche Veränderungen und Verhaltensweisen unter Stress wahrnimmst und dir Strategien zur Veränderung problematischer Mechanismen überlegst.
+        </article>
+        <details>
+            <summary>Hintergrund</summary>
+            <p>Stress gehört zum Schulalltag dazu, doch oft reagieren wir automatisch, ohne bewusst wahrzunehmen, was in uns vorgeht. Wenn wir unsere eigenen Stressmuster erkennen – was wir denken, fühlen, körperlich spüren und wie wir uns verhalten – können wir gezielt Strategien entwickeln, um gesünder mit belastenden Situationen umzugehen.</p>
+        </details>
+        <details>
+            <summary>Benötigtes Material</summary>
+            <ul>
+                <li>Alle benötigten Materialien findest du direkt an der Station vor Ort</li>
+            </ul>
+        </details>
+        <h2>Beschreibung</h2>
+        <p>An dieser Station findest du alle Informationen und Materialien direkt vor Ort. Nimm dir Zeit für diese Selbstreflexion und arbeite mit dem Schema, das dir hilft, deine persönlichen Stressreaktionen besser zu verstehen.</p>
+        <p>Folge den Anweisungen, die du an der Station vorfindest, und entwickle individuelle Strategien für deinen Umgang mit Stress.</p>
+        <p><a href="index.html"><button>⬅ Zurück zur Übersicht</button></a></p>
     </main>
 </body>
 </html>
