--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 <h1>Materialien zum Schulentwicklungstag der beruflichen Schulen im Kreis Ostholstein in Oldenburg am 2. Februar 2026 in Timmendorfer Strand</h1>
 
         <h2>⌚ Wichtige Zeiten</h2>
-        <p>Die Zeiten für die Austauschphasen und die Erkundungen der Wuselstationen könnt ihr selbstorganisiert gestalten und dabei auch Kaffeepausen am Vormittag und Nachmittag sowie das Mittagessen flexibel planen. Bitte seid zu den folgenden Zeiten pünktlich im Plenum:</p>
+        <p>Die Zeiten für die Austauschphasen und die Erkundungen der Wuselstationen kannst du selbstorganisiert gestalten und dabei auch Kaffeepausen am Vormittag und Nachmittag sowie das Mittagessen flexibel planen.</p>
+        <p>Bitte sei zu den folgenden Zeiten pünktlich im Plenum:</p>
         <ul><li>Um 8.30 Uhr zu Begrüßung, Vorstellung und erstem Impuls</li>
         <li>Um 10.30 Uhr zum zweiten Impuls</li>
             <li>Um 13.00 Uhr zur Vorstellung der Wuselstationen</li>
