Update content and headings in austauschrunde1.html

--- a/austauschrunde1.html
+++ b/austauschrunde1.html
@@ -10,8 +10,11 @@
 </head>
 <body>
     <main class="container">
-        <h1>Austauschrunde 1</h1>
-        <p>Tausche dich mit einer oder mehreren Person(en) über folgende Fragen aus:</p>
+        <h1>Impuls 1</h1>
+        <h2>Folien</h2>
+        Katrin hat im Plenum <a href="impuls1.pdf">diese Präsentation</a> gezeigt.
+        <h2>Austausch</h2>
+        <p>Diese Fragen gab es zur Reflexion:</p>
         <ol>
             <li>Welche ein bis drei Erkenntnisperlen nimmst du aus dem Impuls zum Thema Haltung mit?</li>
             <li>Die Rolle als Lehrkraft kann sehr unterschiedlich definiert und ausgefüllt werden. Betrachte deine momentane Haltung zu deiner Rolle:
