Enhance austauschrunde2.html with new content
Added sections for presentation and reflection questions.

--- a/austauschrunde2.html
+++ b/austauschrunde2.html
@@ -11,6 +11,11 @@
 <body>
     <main class="container">
         <h1>Austauschrunde 2</h1>
+
+                <h2>Folien</h2>
+        Nele hat im Plenum gegenständlich präsentiert. <a href="impuls2.pdf">Hier ist eine fotografische Erinnerung</a>.
+        <h2>Austausch</h2>
+        <p>Diese Fragen gab es zur Reflexion:</p>
        
 <p>In ihrem Impuls hat Nele 5 mögliche Orientierungen für das 'Wie?' von Unterrichtentwicklung vorgestellt. Sucht euch einzelne Orientierungen davon heraus und überlegt euch, wie ihr das konkret in eurem Kontext umsetzen könntet:</p>
             <ul>
