Wrap presentation note in paragraph tag

--- a/austauschrunde2.html
+++ b/austauschrunde2.html
@@ -13,7 +13,7 @@
         <h1>Austauschrunde 2</h1>
 
                 <h2>Folien</h2>
-        Nele hat im Plenum gegenständlich präsentiert. <a href="impuls2.pdf">Hier ist eine fotografische Erinnerung</a>.
+     <p> Nele hat im Plenum gegenständlich präsentiert. <a href="impuls2.pdf">Hier ist eine fotografische Erinnerung</a>.</p>
         <h2>Austausch</h2>
         <p>Diese Fragen gab es zur Reflexion:</p>
        
