--- a/austauschrunde1.html
+++ b/austauschrunde1.html
@@ -12,7 +12,7 @@
     <main class="container">
         <h1>Impuls 1</h1>
         <h2>Folien</h2>
-        Katrin hat im Plenum <a href="impuls1.pdf">diese Präsentation</a> gezeigt.
+       <p>Katrin hat im Plenum <a href="impuls1.pdf">diese Präsentation</a> gezeigt.</p>
         <h2>Austausch</h2>
         <p>Diese Fragen gab es zur Reflexion:</p>
         <ol>
